--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
@@ -5,6 +5,10 @@ description: "Spin up Opik Agent Optimizer locally, create a dataset, and run yo
 
 Use this guide when you want to validate the Agent Optimizer end-to-end with minimal choices. By the end, you will have a dataset, a metric, and a successful optimization run logged to the Opik dashboard.
 
+<Info>
+  Already completed the main [Opik Quickstart](/quickstart)? Great—this guide picks up from there. The main Quickstart focuses on tracing and evaluation basics, while this one layers on the optimizer specific (`opik-optimizer`) SDK workflows.
+</Info>
+
 ## Prerequisites
 
 - Python 3.10+
