--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart_notebook.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart_notebook.mdx
@@ -5,6 +5,10 @@ description: "Launch a hosted Colab or Codespace that runs the Agent Optimizer e
 
 Prefer running in the browser? This guide links to maintained notebooks plus the minimal steps needed to duplicate them in your workspace.
 
+<Callout>
+  If you are looking for the general Opik tracing notebook, use the [platform Quickstart notebook](/cookbook/quickstart_notebook). The notebook on this page already includes the Agent Optimizer SDK and walks through datasets/metrics geared toward optimization.
+</Callout>
+
 ## Choose a platform
 
 | Platform | Launch |
