--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/chaining_optimizers.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/chaining_optimizers.mdx
@@ -3,15 +3,16 @@ title: "Chaining optimizers"
 description: "Run multiple optimizers in sequence to balance exploration and fine-tuning."
 ---
 
-Some projects benefit from running two or more optimizers back-to-back. For example, use MetaPrompt to improve wording, then Parameter optimizer to fine-tune sampling settings. This guide explains how to orchestrate those workflows.
+Some projects benefit from running two or more optimizers back-to-back. For example, use MetaPrompt to improve wording, then Parameter optimizer to fine-tune sampling settings. This guide explains why you might chain runs, the trade-offs, and the APIs you use to pass prompts and metadata between stages.
 
-## Patterns
+## Strategy patterns
 
-| Pattern | When to use |
-| --- | --- |
-| MetaPrompt → Parameter | Need better instructions plus temperature tuning. |
-| Hierarchical Reflective → MetaPrompt | Use reflective analysis to identify fixes, then MetaPrompt to polish wording. |
-| Evolutionary → Parameter | Explore broad prompt variants, then fine-tune the winning prompt’s sampling params. |
+| Pipeline | Why run it | Pros | Cons | Complexity |
+| --- | --- | --- | --- | --- |
+| Hierarchical Reflective → Parameter | Existing long/complex prompt senario: Reflective analysis finds failure modes; Parameter optimizer then tightens parameters on the improved prompt. | Excellent for legacy prompts with lots of existing complexity. Helps produces explainable changelog. | Requires metrics with rich `reason` strings; two stages increase cost. | Medium |
+| Evolutionary → Few-Shot Bayesian | Cold-start scenario: explore many prompt architectures first, then let Few-Shot Bayesian pick the best example combination for the winning structure. | High diversity followed by precise example selection. | Evolutionary runs are expensive; Bayesian stage relies on curated datasets. | High |
+| MetaPrompt → Parameter | Baseline prompts need polish plus sampling tweaks. | Quick wins with minimal configuration; can run in under an hour. | Less insight into failure modes than reflective pipelines. | Low. |
+| Evolutionary → Parameter | Hunt for novel prompts, then squeeze out cost/latency by tuning temperature/top_p. | Balances creativity with production readiness. | Two heavy optimization loops; ensure budget headroom. | High. |
 
 ## Example pipeline
 
@@ -46,8 +47,9 @@ final_result = parameter.optimize_parameter(
 ## Checklist
 
 - **Freeze datasets and metrics** between stages to keep comparisons fair.
-- **Log pipeline metadata** (e.g., `experiment_config={"pipeline": "meta_then_param"}`) so dashboards show lineage.
+- **Log pipeline metadata** (e.g., `experiment_config={"pipeline": "hierarchical_then_param"}`) so dashboards show lineage.
 - **Budget tokens** – chained runs multiply costs; start with smaller `n_samples` and increase once results look promising.
+- **Reuse OptimizationResult** – every optimizer returns an `OptimizationResult`, so you can pass `result.prompt` directly into the next stage without rewriting glue code.
 
 ## Automation tips
 
@@ -58,4 +60,6 @@ final_result = parameter.optimize_parameter(
 ## Related docs
 
 - [Optimize prompts](/agent_optimization/optimization/optimize_prompts)
+- [Few-Shot Bayesian optimizer](/agent_optimization/algorithms/fewshot_bayesian_optimizer)
+- [Hierarchical Reflective optimizer](/agent_optimization/algorithms/hierarchical_reflective_optimizer)
 - [Parameter optimizer](/agent_optimization/algorithms/parameter_optimizer)
