--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/custom_metrics.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/custom_metrics.mdx
@@ -3,13 +3,19 @@ title: "Custom metrics"
 description: "Build specialized metrics, integrate external models, and reuse them across optimizations."
 ---
 
-Use custom metrics when built-in metrics are not enough (domain-specific scoring, safety validators, multimodal checks).
+Use custom metrics when built-in metrics are not enough (domain-specific scoring, precise safety checks, unique multimodal checks). Start with the core Opik evaluation docs so you know what already exists:
+
+- [Evaluation concepts](/evaluation/concepts) – terminology and lifecycle.
+- [Metrics overview](/evaluation/metrics/overview) – default heuristic metrics (ROUGE, BLEU, Hallucination, etc.).
+- [LLM-as-a-judge patterns](/evaluation/evaluate_agent_trajectory) – how Opik runs judge models against multi-turn traces.
 
 ## Design principles
 
-- **Deterministic** – cache external model calls or set temperature to 0 so repeated runs match.
+- **Deterministic** – cache external model calls, set temperature to 0 and a seed value (in supported models) so repeated runs match.
 - **Explainable** – always set `reason` on `ScoreResult` for better dashboards.
 - **Composable** – wrap helpers into utility modules so multiple optimizers share them.
+- **Layered** – start with single metrics, then combine them via `MultiMetricObjective` when you need trade-offs.
+- **Cost** - consider the cost implications if you rely on compute and API calls for evaluations.
 
 ## Example: safety + completeness metric
 
@@ -32,18 +38,22 @@ def safety_and_completeness(item, output):
     return ScoreResult(name="safety_completeness", value=value, reason=reason)
 ```
 
-## Share metrics across repos
+## Metric building blocks
 
-- Publish metrics in a shared Python package or internal repo.
-- Version metric modules so teams know when logic changes.
-- Document required environment variables (API keys) in `README` files and `.env.example` templates.
+- **Single metrics** – implement one callable per concern (accuracy, tone, cost). Keep them reusable across prompts.
+- **Multi-metric objectives** – combine single metrics with weights when you need to balance, e.g., accuracy (0.7) + style (0.3). See [Multi-metric optimization](/agent_optimization/best_practices/multi_metric_optimization) for templates.
+- **LLM-as-a-judge** – call out to an evaluation model (OpenAI, Anthropic, etc.) inside the metric. Always  include detailed prompts so results stay stable.
+- **Heuristics** – leverage built-ins from `/evaluation/metrics` instead of reinventing classic scores. You can compose heuristics with custom logic as shown above.
 
 ## Testing
 
 - Write pytest cases that feed canned dataset items into the metric and assert expected scores.
 - Run metrics against a golden dataset on CI to catch regressions.
+- For multi-metric objectives, add tests that verify weight changes behave as expected (e.g., higher weight increases sensitivity).
 
 ## Related docs
 
 - [Define metrics](/agent_optimization/optimization/define_metrics)
-- [Multi-metric optimization](/agent_optimization/best_practices/multi_metric_optimization)
+- [Evaluation concepts](/evaluation/concepts)
+- [LLM judge workflows](/evaluation/evaluate_agent_trajectory)
+- [Metrics overview](/evaluation/metrics/overview)
