--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
@@ -3,14 +3,9 @@ title: "Define datasets"
 description: "Design, version, and validate datasets used for optimization runs."
 ---
 
-The optimizer evaluates candidate prompts against datasets stored in Opik. This guide walks through creating datasets, importing rows, and keeping them stable so optimization results remain trustworthy.
+The optimizer evaluates candidate prompts against datasets stored in Opik. If you are brand new to datasets in Opik, start with [Manage datasets](/evaluation/manage_datasets); this page highlights specific tips to get you started.
 
-## When to use this guide
-
-Use it before running any optimizer when:
-- You need a reusable dataset shared across experiments.
-- You want to mix programmatic inserts with file uploads.
-- You plan to log metadata (context passages, tool outputs) for deeper analysis.
+Datsets are a crucial component of the optimizer SDK as its key component to run and evaluate (score) each dataset item using optimizers to develop a better outcome. Without datasets its not possible to steer the optimizer on what is good and bad.
 
 ## Dataset schema
 
@@ -45,6 +40,15 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
   <Step title="Tag splits">
     Use dataset tags (`dataset.add_tags(["train", "eval"])`) to separate baseline tuning from validation trials.
   </Step>
+  <Step title="Use built-in samples">
+    The optimizer SDK provides ready-made datasets for quick experiments:
+    ```python
+    from opik_optimizer import datasets
+    hotpot = datasets.hotpot_300()
+    tiny = datasets.tiny_test()
+    ```
+    These datasets live in `sdks/opik_optimizer/src/opik_optimizer/datasets` and mirror the notebook examples.
+  </Step>
 </Steps>
 
 ## Best practices
@@ -52,6 +56,7 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
 - **Keep datasets immutable** during an optimization run; create a new dataset version if you need to add rows.
 - **Log context** fields if you run RAG-style prompts so failure analyses can surface missing passages.
 - **Document ownership** using dataset descriptions so teams know who curates each collection.
+- **Keep schema + prompt in sync** – if your prompt expects `{context}`, ensure every dataset row defines that key or provide defaults in the optimizer.
 
 ## Validation checklist
 
@@ -61,4 +66,4 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
 
 ## Next steps
 
-Define how you will score results with [Define metrics](/agent_optimization/optimization/define_metrics), then follow [Optimize prompts](/agent_optimization/optimization/optimize_prompts) to launch experiments.
+Define how you will score results with [Define metrics](/agent_optimization/optimization/define_metrics), then follow [Optimize prompts](/agent_optimization/optimization/optimize_prompts) to launch experiments. For domain-specific scoring, extend the dataset with extra fields and reference them inside [Custom metrics](/agent_optimization/advanced/custom_metrics).
