--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/chaining_optimizers.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/advanced/chaining_optimizers.mdx
@@ -30,13 +30,16 @@ meta_result = meta.optimize_prompt(
     max_trials=4,
 )
 
+# Reuse the optimized prompt from the first stage
+optimized_prompt = prompt.with_messages(meta_result.prompt)
+
 search_space = ParameterSearchSpace(parameters=[
     {"name": "temperature", "distribution": "float", "low": 0.1, "high": 0.9},
     {"name": "top_p", "distribution": "float", "low": 0.7, "high": 1.0},
 ])
 
 final_result = parameter.optimize_parameter(
-    prompt=ChatPrompt(messages=meta_result.prompt),
+    prompt=optimized_prompt,
     dataset=dataset,
     metric=metric,
     parameter_space=search_space,
@@ -49,7 +52,7 @@ final_result = parameter.optimize_parameter(
 - **Freeze datasets and metrics** between stages to keep comparisons fair.
 - **Log pipeline metadata** (e.g., `experiment_config={"pipeline": "hierarchical_then_param"}`) so dashboards show lineage.
 - **Budget tokens** – chained runs multiply costs; start with smaller `n_samples` and increase once results look promising.
-- **Reuse OptimizationResult** – every optimizer returns an `OptimizationResult`, so you can pass `result.prompt` directly into the next stage without rewriting glue code.
+- **Reuse OptimizationResult** – every optimizer returns an `OptimizationResult`, so you can pass `result.prompt` (and `result.details`, `result.history`) directly into the next stage without rebuilding state.
 
 ## Automation tips
 
