--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
@@ -60,9 +60,9 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
 
 ## Validation checklist
 
-- Run `dataset.count()` before and after uploads to confirm row totals.
 - Spot-check rows in the dashboard’s Dataset viewer.
-- If rows include tools or attachments, confirm they appear in the trace tree once you run an optimization.
+- If rows include multimodal data, confirm they appear in the trace tree once you run an optimization.
+- Run an initial small batch optimization with a few rows of data to validate.
 
 ## Next steps
 
