--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/quickstart.mdx
@@ -1,92 +1,98 @@
 ---
 title: "Quickstart"
-description: "Spin up Opik Agent Optimizer locally, create a dataset, and run your first optimization in under 10 minutes."
+description: "Install the Agent Optimizer SDK, run your first optimization, and inspect the results in under 10 minutes."
 ---
 
-Use this guide when you want to validate the Agent Optimizer end-to-end with minimal choices. By the end, you will have a dataset, a metric, and a successful optimization run logged to the Opik dashboard.
+**Opik Agent Optimizer Quickstart** gives you the fastest path from “hello world” to a successful optimization run. If you already walked through the main [Opik Quickstart](/quickstart) (tracing + evaluation), this is the next stop—it layers on the `opik-optimizer` SDK so you can automatically improve prompts and agents.
 
-<Info>
-  Already completed the main [Opik Quickstart](/quickstart)? Great—this guide picks up from there. The main Quickstart focuses on tracing and evaluation basics, while this one layers on the optimizer specific (`opik-optimizer`) SDK workflows.
-</Info>
+## Why Opik Agent Optimizer?
+
+- **Production-grade workflows** – reuse the same datasets, metrics, and tracing you already have in Opik.
+- **Multiple strategies** – swap between MetaPrompt, Hierarchical Reflective, Evolutionary, GEPA, and more with one API.
+- **Deep analysis** – every trial is logged to Opik so you can inspect prompts, tool calls, and failure modes.
+
+<Callout>
+  Estimated time: **≤10 minutes** if you already have Python and an Opik API key configured.
+</Callout>
 
 ## Prerequisites
 
 - Python 3.10+
-- An Opik account with an API key (`opik configure`)
-- Access to an OpenAI-compatible model via LiteLLM (e.g., `OPENAI_API_KEY`)
-- `pipx` or `pip` for installing the SDKs
+- Opik account
+- Access to an OpenAI-compatible LLM via LiteLLM (`OPENAI_API_KEY`, `ANTHROPIC_API_KEY`, etc.)
 
-<Callout>
-  Create an account at [comet.com/signup](https://www.comet.com/signup?from=llm) if you have not already. The CLI stores your token in `~/.opik/config`.
-</Callout>
+## 1. Install and authenticate
 
-## Step-by-step
+```bash
+pip install --upgrade opik opik-optimizer
+opik configure  # paste your API key
+```
 
-<Steps>
-  <Step title="Install the SDKs">
-    ```bash
-    pip install --upgrade opik opik-optimizer litellm
-    opik configure  # paste your API key when prompted
-    ```
-  </Step>
-  <Step title="Create a dataset and metric">
-    ```python
-    import opik
-    from opik.evaluation.metrics import LevenshteinRatio
+## 2. Create a dataset and metric
 
-    client = opik.Opik()
-    dataset = client.get_or_create_dataset(name="agent-opt-quickstart")
-    dataset.upsert([
-        {"question": "What is Opik?", "answer": "Opik is an LLM observability and optimization platform."},
-        {"question": "How do I reduce hallucinations?", "answer": "Use evaluations and prompt optimization to enforce grounding."},
-    ])
+```python
+import opik
+from opik.evaluation.metrics import LevenshteinRatio
 
-    def answer_quality(item, output):
-        metric = LevenshteinRatio()
-        return metric.score(reference=item["answer"], output=output)
-    ```
-  </Step>
-  <Step title="Run the optimizer">
-    ```python
-    from opik_optimizer import MetaPromptOptimizer, ChatPrompt
+client = opik.Opik()
+dataset = client.get_or_create_dataset(name="agent-opt-quickstart")
+dataset.insert([
+    {"question": "What is Opik?", "answer": "Opik is an LLM observability and optimization platform."},
+    {"question": "How do I reduce hallucinations?", "answer": "Use evaluations and prompt optimization to enforce grounding."},
+])
 
-    prompt = ChatPrompt(
-        messages=[
-            {"role": "system", "content": "You are a precise assistant."},
-            {"role": "user", "content": "{question}"},
-        ],
-        model="openai/gpt-4o-mini"
-    )
+def answer_quality(item, output):
+    metric = LevenshteinRatio()
+    return metric.score(reference=item["answer"], output=output)
+```
 
-    optimizer = MetaPromptOptimizer(model="openai/gpt-4o")
-    result = optimizer.optimize_prompt(
-        prompt=prompt,
-        dataset=dataset,
-        metric=answer_quality,
-        max_trials=3,
-        n_samples=2,
-    )
+## 3. Run the optimizer
 
-    result.display()
-    ```
-  </Step>
-  <Step title="Review results in the dashboard">
-    - Run `opik dashboard` or open [https://www.comet.com/opik](https://www.comet.com/opik).
-    - Filter by the project you set on the `ChatPrompt` (default `Optimization`).
-    - Inspect traces, trials, and metric improvements from the run.
-  </Step>
-</Steps>
+```python
+from opik_optimizer import MetaPromptOptimizer, ChatPrompt
 
-## Common issues
+prompt = ChatPrompt(
+    messages=[
+        {"role": "system", "content": "You are a precise assistant."},
+        {"role": "user", "content": "{question}"},
+    ],
+    model="openai/gpt-4o-mini"
+)
 
-| Symptom | Fix |
-| --- | --- |
-| `ValueError: Prompt must be a ChatPrompt object` | Import `ChatPrompt` from `opik_optimizer` and wrap your messages. |
-| `Authentication failed` | Re-run `opik configure` and confirm the API key has Optimizer access. |
-| `liteLLM` provider errors | Verify `OPENAI_API_KEY` or provider keys are exported in the shell running the script. |
+optimizer = MetaPromptOptimizer(model="openai/gpt-4o")
+result = optimizer.optimize_prompt(
+    prompt=prompt,
+    dataset=dataset,
+    metric=answer_quality,
+    max_trials=3,
+    n_samples=2,
+)
+
+result.display()
+```
+
+## 4. Inspect results
+
+- Run `opik dashboard` or open [https://www.comet.com/opik](https://www.comet.com/opik).
+- In the left nav, go to **Evaluation → Optimization runs**, then select your latest run.
+- Review the optimization-progress chart, trial table, and per-trial traces to decide whether to ship the new prompt.
+
+## Common first issues
+
+<AccordionGroup>
+  <Accordion title="Prompt must be a ChatPrompt object">
+    Import `ChatPrompt` from `opik_optimizer` and wrap your `messages` list before passing it to any optimizer.
+  </Accordion>
+  <Accordion title="Authentication failed">
+    Re-run `opik configure` and confirm the account has Agent Optimizer access. If you changed machines, copy the `~/.opik/config` file or re-enter the key.
+  </Accordion>
+  <Accordion title="liteLLM provider errors">
+    Ensure provider keys (e.g., `OPENAI_API_KEY`) are exported in the same shell running the script, and verify the model you selected is enabled for that key.
+  </Accordion>
+</AccordionGroup>
 
 ## Next steps
 
-- Try the [Quickstart notebook](/agent_optimization/getting_started/quickstart_notebook) for a copy/paste Colab version.
-- Learn how datasets and metrics work in depth in [Define datasets](/agent_optimization/optimization/define_datasets) and [Define metrics](/agent_optimization/optimization/define_metrics).
-- Explore algorithm options in the [Optimization Algorithms overview](/agent_optimization/algorithms/overview).
+- Prefer notebooks? Launch the [Quickstart notebook](/agent_optimization/getting_started/quickstart_notebook).
+- Dive deeper into [Define datasets](/agent_optimization/optimization/define_datasets) and [Define metrics](/agent_optimization/optimization/define_metrics).
+- Explore the [Optimization Algorithms overview](/agent_optimization/algorithms/overview) to pick the best strategy for your workload.
