--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/google_adk.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/google_adk.mdx
@@ -3,7 +3,7 @@ title: "Optimize Google ADK agents"
 description: "Log Google AI Agent Builder runs to Opik and optimize their prompts."
 ---
 
-Google’s Agent Developer Kit (ADK) exposes agent flows via REST and event hooks. Combine those hooks with Opik tracing to capture data for optimization.
+Google’s Agent Developer Kit (ADK) exposes agent flows via REST and event hooks. Combine those hooks with Opik tracing to capture data for optimization. See `sdks/opik_optimizer/scripts/llm_frameworks/adk/` for reference implementations (`adk_agent.py`, `adk_evolutionary_hotpot_example.py`).
 
 ## Connect ADK to Opik
 
