--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/langgraph.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/langgraph.mdx
@@ -5,7 +5,7 @@ description: "Trace LangGraph workflows, build datasets, and optimize their prom
 
 ## Overview
 
-LangGraph applications often combine tool calls, branching logic, and persistence. Use Opik to trace those runs, turn them into datasets, and then feed them into the Agent Optimizer.
+LangGraph applications often combine tool calls, branching logic, and persistence. Use Opik to trace those runs, turn them into datasets, and then feed them into the Agent Optimizer. Refer to `sdks/opik_optimizer/scripts/llm_frameworks/langgraph/` for a complete runnable example (`langgraph_agent.py`, `langgraph_evolutionary_hotpot_example.py`).
 
 ## Instrument LangGraph
 
