--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/langgraph.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/langgraph.mdx
@@ -7,49 +7,47 @@ description: "Trace LangGraph workflows, build datasets, and optimize their prom
 
 LangGraph applications often combine tool calls, branching logic, and persistence. Use Opik to trace those runs, turn them into datasets, and then feed them into the Agent Optimizer. Refer to `sdks/opik_optimizer/scripts/llm_frameworks/langgraph/` for a complete runnable example (`langgraph_agent.py`, `langgraph_evolutionary_hotpot_example.py`).
 
-## Instrument LangGraph
+## End-to-end flow
 
-```python
-from langgraph.graph import StateGraph
-from opik import track
-from opik.tracing import OpikTracer
+<Steps>
+  <Step title="Instrument LangGraph">
+    ```python
+    from langgraph.graph import StateGraph
+    from opik import track
+    from opik.tracing import OpikTracer
 
-# define your graph
-workflow = StateGraph(...)
-app = workflow.compile()
+    workflow = StateGraph(...)
+    app = workflow.compile()
 
-with OpikTracer(project_name="agent-optimizer-langgraph"):
-    result = app.invoke({"messages": [
-        {"role": "user", "content": "Summarize Opik in two sentences"}
-    ]})
-```
-
-- Every node run becomes a span in Opik, letting you inspect intermediate tool calls.
-- Add `@track(type="tool")` to custom functions for richer traces.
-
-## Build datasets from traces
-
-1. Filter traces by tag (scenario, dataset split) in the dashboard.
-2. Export the inputs/outputs as JSON via the “Create dataset from traces” action.
-3. Use that dataset in the optimizer run to mirror real LangGraph behavior.
-
-## Optimize prompts
-
-- Extract the agent’s system instructions as a `ChatPrompt`.
-- If your LangGraph uses tool calls, pair with [Optimize tools](/agent_optimization/optimization/optimize_tools).
-- Run a MetaPrompt or Hierarchical Reflective optimization depending on whether you need wording tweaks or failure diagnostics.
-
-## Deploy back to LangGraph
-
-```python
-optimized_prompt = result.prompt
-workflow.update_node("assistant", system_prompt=optimized_prompt.messages[0]["content"])
-```
-
-- Version prompts in git so you can roll back if a change regresses.
-- Re-run your LangGraph smoke tests before promoting to production.
+    with OpikTracer(project_name="agent-optimizer-langgraph"):
+        result = app.invoke({"messages": [
+            {"role": "user", "content": "Summarize Opik in two sentences"}
+        ]})
+    ```
+    - Every node becomes a span in Opik so you can inspect intermediate tool calls.
+    - Decorate custom tools with `@track(type="tool")` for richer traces.
+    - Full tracing instructions live in the [LangGraph tracing guide](/integrations/langgraph).
+  </Step>
+  <Step title="Build datasets">
+    - Curate your dataset for your agent which can be based on existing traces.
+    - Import dataset as CSV/JSON and import them via `opik dataset upload`.  
+  </Step>
+  <Step title="Run the optimizer">
+    - Extract the agent’s system instructions into a `ChatPrompt`.  
+    - Choose an optimizer (MetaPrompt, Hierarchical Reflective, Evolutionary, etc.).  
+    - When your graph calls tools, pair with [Optimize tools](/agent_optimization/optimization/optimize_tools).
+  </Step>
+  <Step title="Deploy back to LangGraph">
+    ```python
+    optimized_prompt = result.prompt
+    workflow.update_node("assistant", system_prompt=optimized_prompt.messages[0]["content"])
+    ```
+    - Version prompts in git so you can roll back if needed.  
+    - Re-run LangGraph smoke tests before promoting to production.
+  </Step>
+</Steps>
 
 ## Resources
 
-- [LangGraph integration guide](/integrations/langgraph)
+- [LangGraph tracing guide](/integrations/langgraph)
 - [Dataset design](/agent_optimization/optimization/define_datasets)
