[OPIK-2959] [FE] [BE] Finalize FE support for Multiple Custom Providers (#3967)
* OPIK-2548 frontend implementation

* issue-3040 add custom provider in configuration page

* issue-3040 fix add custom provider button

* issue-3040 hide default prefix

* issue-3040 integrate with backend

* issue-3040 fix custom providers grouping

* issue-3040 fix provider name extraction

* issue-3040 fix provider edit

* issue-3040 fix state preservation

* issue-3040 fix create custom provider

* issue-3040 fix custom provider selection

* issue-3040 post rebase fixes

* issue-3040 update docs

* issue-3040 code style

* Optimised images with calibre/image-actions

* issue-3040 remove provider name restrictions

* issue-3040 ui fixes

* issue-3040 lint

* issue-3040 fix update custom provider flow

* issue-3040 fix typecheck

* issue-3040 pr comments FE

* issue-3040 provider types

* issue-3040 add FE coverage

* issue-3040 PR comments FE

* issue-3040 lint

* Refactor SetupProviderDialog to improve provider handling and UI structure. Added DialogAutoScrollBody for better layout and updated form submission logic to include providerName for custom providers.

* Enhance CustomProviderDetails component to support edit mode by passing isEdit prop. Simplified provider name input rendering logic and updated description for clarity.

* - fix linter error

* issue-3040 re-introduce BE incompatible changes

* Refactor and enhance provider configuration management, including adding support for composed provider types, improving form handling, and streamlining custom provider workflows.

* Simplify model configuration check logic in LlmProviderFactoryImpl

* Refactor: Improve provider form logic, validation, and schema handling

* Revision 2: Address Copilot PR review comments

- Fix double slash bug in custom provider model prefix logic
- Clarify conditional validation requirement in provider name schema documentation

* Apply Spotless formatting to backend files

* Update LlmProviderFact

--- a/apps/opik-documentation/documentation/fern/docs/configuration/ai_providers.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/configuration/ai_providers.mdx
@@ -270,21 +270,32 @@ Bedrock endpoints follow this pattern: `https://bedrock-runtime.<region>.amazona
 
 #### vLLM / Custom Provider
 
-Use this option to add any OpenAI API-compliant provider such as vLLM, Ollama, etc.
+Use this option to add any OpenAI API-compliant provider such as vLLM, Ollama, etc. **You can configure multiple custom providers**, each with their own unique name, URL, and models.
 
 <Frame>
   <img src="/img/configuration/vllm_configuration.png" alt="New Custom AI Provider Modal" />
 </Frame>
 
-For the URL section, enter your server URL, for example: `http://host.docker.internal:8000/v1`.
+##### Configuration Steps
+
+1. **Provider Name**: Enter a unique name to identify this custom provider (e.g., "vLLM Production", "Ollama Local", "Azure OpenAI Dev")
+2. **URL**: Enter your server URL, for example: `http://host.docker.internal:8000/v1`
+3. **API Key** (optional): If your model access requires authentication, enter the API key. Otherwise, leave this field blank.
+4. **Models**: List all models available on your server. You'll be able to select one of them for use later.
 
 <Tip>
   If you're running Opik locally, you would need to use `http://host.docker.internal:<PORT>/v1` for Mac and Windows or `http://172.17.0.1:<PORT>/v1` for Linux, and not `http://localhost`.
 </Tip>
 
-If your model access requires authentication via an API key, enter it in the API Key field. Otherwise, you can leave this field blank.
+##### Managing Multiple Custom Providers
 
-In the Models section, list all models available on your server. You’ll be able to select one of them for use later.
+Once you've configured multiple custom providers, you can:
+
+- **Edit** any custom provider by selecting it from the provider dropdown in the configuration dialog
+- **Delete** custom providers that are no longer needed
+- **Switch between** different custom providers in the Playground and Automation Rules
+
+Each custom provider appears as a separate option in the provider dropdown, making it easy to work with multiple self-hosted or custom LLM deployments.
 
 ## API Key Security
 
