--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
@@ -9,7 +9,7 @@ Datasets are a crucial component of the optimizer SDK, serving as a key componen
 
 ## Dataset schema
 
-Every item is a JSON object. Required keys depend on your prompt template; optional keys help with analysis.
+Every item is a JSON object. Required keys depend on your prompt template; optional keys help with analysis. Schemas are optional—define only the fields your prompt or metrics actually consume.
 
 | Field | Purpose |
 | --- | --- |
@@ -34,11 +34,8 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
   </Step>
   <Step title="Upload from file">
     - Prepare a CSV or Parquet file with column headers that match your prompt variables.
-    - Run `opik dataset upload agent-opt-support file.csv`.
+    - Load the file via Python (e.g., pandas) and call `dataset.insert(...)` or related helpers from the [Dataset SDK](https://www.comet.com/docs/opik/python-sdk-reference/evaluation/Dataset.html).
     - Verify in the UI that rows include `metadata` if you plan to filter by scenario.
-  </Step>
-  <Step title="Tag splits">
-    Use dataset tags (`dataset.add_tags(["train", "eval"])`) to separate baseline tuning from validation trials.
   </Step>
   <Step title="Use built-in samples">
     The optimizer SDK provides ready-made datasets for quick experiments:
@@ -55,6 +52,7 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
 
 - **Keep datasets immutable** during an optimization run; create a new dataset version if you need to add rows.
 - **Log context** fields if you run RAG-style prompts so failure analyses can surface missing passages.
+- **Track splits via metadata** (e.g., `metadata["split"] = "eval"`) because dataset tags are not supported yet.
 - **Document ownership** using dataset descriptions so teams know who curates each collection.
 - **Keep schema + prompt in sync** – if your prompt expects `{context}`, ensure every dataset row defines that key or provide defaults in the optimizer.
 
