--- a/apps/opik-documentation/documentation/fern/docs/faq.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/faq.mdx
@@ -242,3 +242,38 @@ into potential issues.
 
 Reviewing these sections can help pinpoint the source of the problem and suggest possible
 resolutions.
+
+### ⌨️ Using Comet Debugger Mode
+
+**Comet Debugger Mode** is a hidden diagnostic feature in the Opik UI that displays real-time
+technical information to help you troubleshoot issues. This mode is particularly useful when
+investigating connectivity problems, reporting bugs, or verifying your deployment version.
+
+**To toggle Comet Debugger Mode:**
+
+Press `Command + Shift + .` on macOS or `Ctrl + Shift + .` on Windows/Linux
+
+**What it displays:**
+
+- **Network Status**: Real-time connectivity indicator showing your connection to the Opik backend
+- **Opik Version**: The current version of Opik you're running (click to copy to clipboard)
+
+This information is helpful when:
+
+- Reporting issues to the Opik team (include the version number)
+- Verifying your Opik version matches expected deployment
+- Diagnosing connectivity problems between UI and backend
+- Troubleshooting UI-related issues or unexpected behavior
+- Confirming successful updates or deployments
+
+**How it works:**
+
+The keyboard shortcut toggles the debug information overlay on and off. When enabled, a small
+status bar appears in the UI showing the network connectivity status and version information.
+The mode persists across browser sessions (stored in local storage), so you only need to enable
+it once until you toggle it off again.
+
+<Note>
+  The debugger mode setting persists across sessions and is stored in your browser's local storage.
+  Press the keyboard shortcut again to hide the debug information.
+</Note>
